avoid text overflow in publish dialog

--- a/src/gwt/src/org/rstudio/studio/client/rsconnect/ui/RSConnectDeploy.css
+++ b/src/gwt/src/org/rstudio/studio/client/rsconnect/ui/RSConnectDeploy.css
@@ -15,19 +15,9 @@
  
 @external .gwt-CheckBox;
 
-@if rstudio.desktop true {
-@def appDetailsWidth 250px
-@def accountListWidth 262px
-@def deployIllustrationMarginLeft 12px
-} @else {
-@def appDetailsWidth 238px
-@def accountListWidth 250px
-@def deployIllustrationMarginLeft 0
-}
-
 .deployIllustration
 {
-   margin-left: deployIllustrationMarginLeft;
+   margin-left: 0;
 }
 
 .sourceDestLabels
@@ -143,7 +133,8 @@
 .accountList
 {
    height: 100px;
-   width: accountListWidth;
+   width: 250px;
+   overflow: auto;
 }
 
 .accountList.accountListCondensed
@@ -160,6 +151,7 @@
    padding-bottom: 5px;
    border: 1px solid #999999;
    background-color: #fcfcfc;
+   overflow: auto;
 }
 
 .accountAnchor
@@ -188,7 +180,7 @@
    padding: 5px;
    margin: 0px;
    overflow: hidden;
-   width: appDetailsWidth;
+   width: 250px;
 }
 
 .appDetailsPanel 
